# py-app-sample

./: README.md  pyproject.toml
py_app_sample/: __main__.py
