[tool.poetry]
name = "py-app-sample"
version = "0.1.0"
description = ""
authors = ["te9yie <te9yie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-app-sample = "py_app_sample.__main__:main"
